# sales-analytics-platform

./: README.md
02_Sales Analytics Platform/: CHANGELOG.md  LICENSE  README.md  requirements.txt  run.py  run_demo.py  streamlit_app.py
02_Sales Analytics Platform/automation/: campaign_config.json
02_Sales Analytics Platform/build_config/: MANIFEST.in  Makefile  pyproject.toml  setup.py
02_Sales Analytics Platform/config/: requirements-dev.txt  translations.json
02_Sales Analytics Platform/data/: generate_enterprise_data.py  generate_sample_data.py
02_Sales Analytics Platform/data/processed/: sales_transformed.csv  sales_validated.csv
02_Sales Analytics Platform/data/raw/: sales_data.csv
02_Sales Analytics Platform/docs/: CLEANUP_COMPLETE.md  CODE_QUALITY_REPORT.md  DIRECTORY_TREE.md  ENTERPRISE_README.md  FINAL_ORGANIZATION.md  PROFESSIONAL_UPGRADE.md  PROJECT_COMPLETION_STATUS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  SIMPLIFIED_STRUCTURE.md  TECHNICAL_ENHANCEMENTS.md  archive
02_Sales Analytics Platform/logs/: validation_results.json
02_Sales Analytics Platform/notebooks/: 01_Exploratory_Data_Analysis.ipynb  02_ML_Model_Training.ipynb  README.md
02_Sales Analytics Platform/scripts/: deploy.py  quick_setup.py  run_dashboard.py  validate_enterprise_systems.py
02_Sales Analytics Platform/src/: config.py  exceptions.py
02_Sales Analytics Platform/src/ai/: ai_insights.py
02_Sales Analytics Platform/src/dashboard/: app.py  callbacks.py  enterprise_app.py  layout.py  realtime_client.py
02_Sales Analytics Platform/src/etl/: load.py  transform.py
02_Sales Analytics Platform/src/features/: features.py
02_Sales Analytics Platform/src/models/: advanced_ml.py
02_Sales Analytics Platform/src/realtime/: streaming_server.py
02_Sales Analytics Platform/src/utils/: logging_utils.py
02_Sales Analytics Platform/ui/: i18n.py
